--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 Blink = "ad839575-38b3-5650-b840-f874b8c74a25"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
