--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
