--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 
 [compat]
 Arpack = "0.4"
