--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [compat]
+CUDA = "3.12.0"
 Arpack = "0.4"
 DocStringExtensions = "0.8"
 ProgressBars = "0.7, 0.8"
