--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,7 @@ version = "0.1.1"
 
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
-BFloat16s = "ab4f0b2a-ad5b-11e8-123f-65d77653426b"
+####BFloat16s = "ab4f0b2a-ad5b-11e8-123f-65d77653426b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -19,17 +19,18 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [compat]
-CUDA = "3.12.0"
-Arpack = "0.4"
-DocStringExtensions = "0.8"
-ProgressBars = "0.7, 0.8"
-julia = "1.9.1"
+###CUDA = "4, 5"
+###Arpack = "0.4"
+####DocStringExtensions = "0.8"
+####DocStringExtensions = "0.8, 0.9"
+###ProgressBars = "0.7, 0.8"
+###julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [targets]
-test = ["Test"]
+test = ["Test", "JLD2"]
