Revert "Merge pull request #18 from angkunwu/main"
This reverts commit 9f374146235877e72b921293068099306ba4f8e5, reversing
changes made to e09f170573460191e9fd90de874e28150fb6406f.

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Polynomials = "4"
 ProgressBars = "1"
 QuadGK = "2"
 Zygote = "0.7"
-julia = ">= 1.10"
+julia = "1.10"
 
 [extras]
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
