--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           version: '1.10'
       - name: Install dependencies and run tests
-        run: julia --project=. -e 'using Pkg; Pkg.instantiate(); Pkg.test()'
+        run: JULIA_PKG_SERVER= julia --project=. -e 'using Pkg; Pkg.instantiate(); Pkg.test()'
 
   docs:
     needs: test
